--- a/git-server/templates/index.html
+++ b/git-server/templates/index.html
@@ -10,7 +10,7 @@
 {% block content %}
 <ul>
     {% for path in paths %}
-    <li><a href="/{{path}}">{{ path }}</a></li>
+    <li><a href="/{{path}}/">{{ path }}</a></li>
     {% endfor %}
 </ul>
 {% endblock %}
