--- a/git-server/templates/_base.html
+++ b/git-server/templates/_base.html
@@ -3,13 +3,36 @@
 
 <head>
     <title>{% block title %}{% match title %}{% when Some with (val) %}{{ val }} -{% when None %}{% endmatch %} {% endblock %}Rustile</title>
+    <link href="https://cdn.staticfile.org/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     {% block head %}{% endblock %}
 </head>
 
 <body>
-    <div id="content">
+    <header class="navbar-bottom-border" style="border-bottom: 1px silver solid;">
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a aria-current="page" class="navbar-brand" href="/">Rustile</a><button aria-controls="basic-navbar-nav" type="button" aria-label="Toggle navigation" class="navbar-toggler collapsed" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#basic-navbar-nav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse" id="basic-navbar-nav">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        </li>
+                    </ul>
+                    <div class="navbar-nav">
+                        <a target="_blank" href="https://blog.jeffthecoder.xyz/blog" class="nav-link">Blogs</a>
+                        <a target="_blank" href="https://github.com/jeffguorg" class="nav-link">@jeffguorg</a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <div id="content" class="py-2">
         {% block content %}{% endblock %}
     </div>
+    <script src="https://cdn.staticfile.org/bootstrap/5.1.3/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.bootcss.com/mermaid/8.0.0-rc.8/mermaid.min.js"></script>
 </body>
 
 </html>
