fix a link to my blog

--- a/git-server/templates/_base.html
+++ b/git-server/templates/_base.html
@@ -21,7 +21,7 @@
                         </li>
                     </ul>
                     <div class="navbar-nav">
-                        <a target="_blank" href="https://blog.jeffthecoder.xyz/blog" class="nav-link">Blogs</a>
+                        <a target="_blank" href="https://blog.jeffthecoder.xyz/" class="nav-link">Blogs</a>
                         <a target="_blank" href="https://github.com/jeffguorg" class="nav-link">@jeffguorg</a>
                     </div>
                 </div>
