--- a/git-server/templates/file_browser.html
+++ b/git-server/templates/file_browser.html
@@ -1,15 +1,15 @@
 {% extends "_base.html" %}
 
-{% block title %}Index{% endblock %}
+{% block title %}Directory: {% if path.is_empty() %}Home{% else %}{{path}}{% endif %} - {% endblock %}
 
 {% block content %}
 <div class="container py-2">
     <table class="table">
         <tbody>
-            {% for path in paths %}
+            {% for entry in entries %}
             <tr>
                 <td>
-                    <a href="/{{path}}/">{{ path }}</a>
+                    <a href="/{{entry}}/">{{ entry }}</a>
                 </td>
             </tr>
             {% endfor %}
