--- a/git-server/templates/_git_base.html
+++ b/git-server/templates/_git_base.html
@@ -36,7 +36,7 @@
         <div class="row my-1">
             <div class="col">
                 <div class="btn-group shadow">
-                    <a class="btn btn-light" href="/{{repo_path}}/{{object_type}}/{{ref_name}}/">Current {{spec_kind}}/{{ref_name}}</a>
+                    <a class="btn btn-light" href="/{{repo_path}}/tree/{{ref_name}}/">Current {{spec_kind}}/{{ref_name}}</a>
                     <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
                         <span class="visually-hidden">Toggle Dropdown</span>
                     </button>
