don't show split line if either branch or tags is empty

--- a/git-server/templates/_git_base.html
+++ b/git-server/templates/_git_base.html
@@ -44,9 +44,11 @@
                         {% for branch in branches %}
                         <li><a class="dropdown-item" href="/{{repo_path}}/tree/{{branch}}/">{{ branch }}</a></li>
                         {% endfor %}
+                        {% if branches.is_empty() == tags.is_empty() %}
                         <li>
                             <hr class="dropdown-divider">
                         </li>
+                        {% endif %}
                         {% for tag in tags %}
                         <li><a class="dropdown-item" href="/{{repo_path}}/tree/{{tag}}/">{{ tag }}</a></li>
                         {% endfor %}
